# protozero

./: .clang-tidy  .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE.md  Makefile  README.md  UPGRADING.md  appveyor.yml  build-appveyor.bat  build-msys2.bat  cheatsheet.md  common.gypi  package.json  pbf.gyp  pbf.hpp  pbf_common.hpp  pbf_reader.hpp  pbf_writer.hpp  protozero.gyp  tutorial.md
.github/actions/cmake/: action.yml
.github/actions/install-ubuntu/: action.yml
.github/workflows/: ci.yml  clang-tidy.yml
doc/: CMakeLists.txt  Doxyfile  Doxyfile.in  advanced.md  cheatsheet.md  macros.md  tutorial.md
docker/: README.md
docker/debian_buster/: Dockerfile
docker/debian_stretch/: Dockerfile
docker/ubuntu_14_04/: Dockerfile
docker/ubuntu_16_04/: Dockerfile
docker/ubuntu_18_04/: Dockerfile
fuzz/: varint.cpp
gyp/: protozero.gyp
include/protozero/: basic_pbf_builder.hpp  basic_pbf_writer.hpp  buffer.hpp  buffer_fixed.hpp  buffer_string.hpp  buffer_vector.hpp  byteswap.hpp  config.hpp  data_view.hpp  exception.hpp  fixed_size_buffer.hpp  fixed_size_buffer_adaptor.hpp  iterators.hpp  pbf_builder.hpp  pbf_common.hpp  pbf_message.hpp  pbf_reader.hpp  pbf_writer.hpp  protozero.hpp  types.hpp  varint.hpp  version.hpp
scripts/: linux.sh  osx.sh
test/: .gitignore  CMakeLists.txt  README.md  create_binary_test_data.sh  create_pbf_test_data.sh  reader_tests.cpp  run_all_tests.cpp  test.cpp  test.hpp  testcase.hpp  tests.cpp
test/catch/: catch.hpp
test/include/: buffer.hpp  packed_access.hpp  scalar_access.hpp  test.hpp  testcase.hpp
test/t/: .gitignore
test/t/alignment/: test_cases.cpp
test/t/basic/: reader_test_cases.cpp  runtest.cpp  test_cases.cpp
test/t/bool/: reader_test_cases.cpp  runtest.cpp  test_cases.cpp  testcase.cpp  write_tests.cpp  writer_test_cases.cpp
test/t/bytes/: runtest.cpp  (+5 more)
test/unit/: CMakeLists.txt  test_basic.cpp  test_buffer.cpp  test_endian.cpp  test_iterators.cpp  test_varint.cpp
tools/: CMakeLists.txt  README.md  pbf-decoder.cpp
(+199 files in other folders)
